...
                                foregroundColor: const Color(0xFF549186)),
                            child: const Icon(Icons.delete),
                          ),
                          const FittedBox(
                            fit: BoxFit.scaleDown,
                            child: Text(
                              "Add Card",
                              style: TextStyle(
                                  color: Colors.white,
                                  fontWeight: FontWeight.bold,
                                  fontSize: 18),
                            ),
                          ),
                          OutlinedButton(
                            key: const Key('flashcardSaveButton'),
                            onPressed: () => saveFlashcard(context),
                            style: OutlinedButton.styleFrom(
                                shape: const CircleBorder(),
                                foregroundColor: const Color(0xFF549186)),
                            child: const Icon(Icons.save),
                          )
...
                          width: double.maxFinite,
                          child: Material(
                            color:Colors.white10,
                            elevation:10,
                            borderRadius: BorderRadius.circular(10),
                            child: TextField(
                              key: const Key('hintTextField'),
                              style: const TextStyle(color: Colors.white),
                              cursorColor: const Color(0xFF549186),
                              decoration: const InputDecoration(
                                focusedBorder: OutlineInputBorder(
                                  borderSide: BorderSide(color: Colors.transparent),
                                ),
...
                        padding: const EdgeInsets.only(top: 8.0, left: 8, right: 8),
                        child: Material(
                          color:Colors.white10,
                          elevation:10,
                          borderRadius: BorderRadius.circular(10),
                          child: TextField(
                            key: const Key('questionTextField'),
                            style: const TextStyle(color: Colors.white),
                            cursorColor: const Color(0xFF549186),
                            decoration: const InputDecoration(
                              focusedBorder: OutlineInputBorder(
                                borderSide: BorderSide(color: Colors.transparent),
                              ),
...
                        child: Material(
                          color:Colors.white10,
                          elevation:10,
                          borderRadius: BorderRadius.circular(10),
                          child: TextField(
                            
                            key: const Key('answerTextField'),
                            style: const TextStyle(color: Colors.white),
                            cursorColor: const Color(0xFF549186),
                            decoration: const InputDecoration(
                              focusedBorder: OutlineInputBorder(
                                borderSide: BorderSide(color: Colors.transparent),
                              ),
...

  Future<bool> showOverwriteDialog(BuildContext context) async {
    return await showDialog(
          context: context,
          builder: (context) {
            return AlertDialog(
              title: const Text('Duplicate Question'),
              content: const Text(
                  'A flashcard with this question already exists. Do you want to overwrite it?'),
              actions: <Widget>[
                TextButton(
                  onPressed: () => Navigator.of(context).pop(false),
                  child: const Text('Cancel'),
                ),
                TextButton(
                  onPressed: () => Navigator.of(context).pop(true),
                  child: const Text('Overwrite Card'),
                ),
              ],
            );
          },
        ) ??
        false; // Return false if dialog is dismissed
...
