...
                                ),
                              ),
                              Column(
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: [
                                  SizedBox(
                                    key: const Key('FlashcardBox'),
                                    width: 380,
                                    height: 400,
                                    child: FlipCard(
                                        side: CardSide.FRONT,
                                        key: _flipCardKey,
                                        front: FlashcardView(
...
